# Multi-Threaded-System

./: Multi-Threaded System Project.pptx  README.md  Team Members.ahk
ChatSystem_SharedMemory/: CMakeLists.txt  SharedMemoryVids.7z  shared.cpp  shared.h
ChatSystem_SharedMemory/Client/: client.cpp  client.h  main.cpp
ChatSystem_SharedMemory/GUI/: client_gui.cpp  client_gui.h  server_gui.cpp  server_gui.h
ChatSystem_SharedMemory/GUI/imgui/: imgui_demo.cpp
ChatSystem_SharedMemory/Server/: main.cpp  server.cpp  server.h
ChatSystem_Sockets/: CMakeLists.txt  SocketsVids.7z
ChatSystem_Sockets/gui/: main_client.cpp  main_gui.cpp
ChatSystem_Sockets/include/gui/: ChatClientGui.hpp  ChatGui.hpp
ChatSystem_Sockets/include/networking/: ChatClient.hpp  ChatServer.hpp
ChatSystem_Sockets/src/gui/: ChatClientGui.cpp  ChatGui.cpp
ChatSystem_Sockets/src/networking/: ChatClient.cpp  ChatServer.cpp
